# DoomProject

./: .gitignore  CMakeLists.txt  MyDoomProject.sln  README.md  build.sh
.github/workflows/: ci.yml
DoomGame/: Angle.cpp  Angle.h  DataTypes.h  DoomGame.cpp  DoomGame.vcxproj  DoomGame.vcxproj.filters  Engine.cpp  Engine.h  Fixed.cpp  Fixed.h  Game.cpp  Game.h  Level.cpp  Level.h  LevelLoader.h  Main.cpp  Player.cpp  Player.h  RenderUtilities.cpp  RenderUtilities.h  WADReader.cpp  WADReader.h
DoomGameTests/: DoomGameTests.vcxproj  WADReaderTests.cpp  test.cpp
